--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -6,4 +6,7 @@
     <cache-path
         name="all_cache"
         path="/" />
+    <external-files-path
+        name="camera_to_text"
+        path="/" />
 </paths>
